--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -5085,3 +5085,65 @@ input[type="number"] {
 	top: 2px;
 	left: 8px;
 }
+.form-username{
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+.form-username {
+  padding: 0;
+  margin: 0;
+  font-size: inherit;
+  font-family: inherit;
+  color: inherit;
+  cursor: default;
+  font-weight: bold;
+}
+/* Add some spacing between the nav links */
+/* Remove border from tabs */
+.nav-tabs .nav-link {
+  border: none;
+  color: inherit;
+  text-decoration: none;
+  margin-left: 70px;
+}
+
+/* Add box shadow when a tab is clicked */
+.nav-tabs .nav-link.active {
+  border-bottom: 5px solid rgba(240, 128, 128, 1);
+}
+/* Adjust spacing for the last nav link to avoid extra spacing on the right */
+.nav-tabs .nav-link:last-child {
+  margin-right: 0;
+}
+.custom-row-height td {
+  height: 70px; /* Set your desired height here */
+}
+/* CSS để căn giữa modal */
+#addressModal {
+  align-items: center;
+  justify-content: center;
+}
+
+#sizeGuideModal .modal-body {
+  max-height: 400px;
+  overflow-y: auto;
+}
+#addressModal .modal-body {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+
+
+.star {
+  color: #ffd43b; /* Màu vàng của sao */
+}
+
+
+
+
+
+
+
+
