--- a/src/main/resources/templates/auth/change-info.html
+++ b/src/main/resources/templates/auth/change-info.html
@@ -1,58 +1,50 @@
-
-    <section class="account-area">
-        <div class="container">
-            <div class="row mx-0 bg-white">
-
-                <div class="col-md-4 text-center">
-                    <span>
-                             <img id="previewImage" th:src="@{'/assets/images/' + ${account.photo}}" alt="ẢNH CÁ NHÂN"
-                             style="width: 70%; height: 360px; margin-top: 5rem;object-fit: scale-down">
-                    </span>
-                </div>
-                <div class="col-md-8">
-                    <form class="form p-3" th:object="${account}" th:action="@{/auth/change-info}" method="post"
-                          enctype="multipart/form-data">
-                        <div class="form-group row">
-                            <label class="form-label">Tên đăng nhập</label>
-                            <input type="text" class="form-control" name="username" th:value="*{username}" readonly>
+<section class="account-area">
+    <div class="container">
+        <div class="row mx-0 bg-white">
+            <div class="col-md-8">
+                <form class="form p-3" th:object="${account}" th:action="@{/auth/change-info}" method="post"
+                      enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label class="form-label">Tên đăng nhập : </label>
+                        <input type="text" class="form-username" name="username" th:field="*{username}" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Họ và tên</label>
+                        <input type="text" class="form-control" name="fullname" th:field="*{fullname}">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Email</label>
+                        <input type="email" class="form-control" name="email" th:field="*{email}">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Số điện thoại</label>
+                        <input type="text" class="form-control" name="soDienThoai" th:field="*{soDienThoai}">
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" name="password" th:field="*{password}" hidden>
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" name="token" th:field="*{token}" hidden>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Ảnh</label>
+                        <div class="input-group mb-3">
+                            <input type="file" class="form-control" id="inputGroupFile02" name="file"
+                                   onchange="previewImage(this)">
                         </div>
-                        <div class="form-group row">
-                            <label class="form-label">Họ và tên</label>
-                            <input type="text" class="form-control" name="fullname" th:field="*{fullname}">
-                        </div>
-                        <div class="form-group row">
-                            <label class="form-label">Email</label>
-                            <input type="email" class="form-control" name="email" th:field="*{email}">
-                        </div>
-                        <div class="form-group row">
-                            <label class="form-label">Số điện thoại</label>
-                            <input type="text" class="form-control" name="soDienThoai" th:field="*{soDienThoai}">
-                        </div>
-                        <div class="form-group row">
-                            <input type="text" class="form-control" name="password" th:field="*{password}" hidden>
-                        </div>
-                        <div class="form-group row">
-                            <input type="text" class="form-control" name="token" th:field="*{token}" hidden>
-                        </div>
-                        <div class="form-group row">
-                            <label class="form-label">Ảnh</label>
-                            <div class="input-group mb-3">
-                                <input type="file" class="form-control" id="inputGroupFile02" name="file"
-                                       onchange="previewImage(this)">
-                                <label class="input-group-text" for="inputGroupFile02">Chọn ảnh</label>
-                            </div>
-                        </div>
-
-                        <br>
-                        <div class="card-header text-center">
-                            <button type="submit" class="btn btn-success">
-                                <i class="zmdi zmdi-update"></i> Lưu
-                            </button>
-                        </div>
-                    </form>
-
-                </div>
+                    </div>
+                    <div class="card-header">
+                        <button type="submit" class="btn btn-light">
+                            <i class="zmdi zmdi-update"></i> Lưu
+                        </button>
+                    </div>
+                </form>
             </div>
-
+            <div class="col-md-4 text-center">
+                <img id="previewImage" class="rounded-circle" th:src="@{'/assets/images/' + ${account.photo}}" alt="ẢNH CÁ NHÂN"
+                     style="margin-top: 5rem;object-fit: scale-down">
+            </div>
         </div>
-    </section>
+    </div>
+    </div>
+</section>
