--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -79,10 +79,14 @@
 
 										<div class="rating-box-wrap">
 											<div class="rating-box">
-												<i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
-													class="fa fa-star"></i> <i class="fa fa-star"></i>
+												<!-- Gọi hàm calculateAverageRating một lần và lưu trữ giá trị vào biến avgRating -->
+												<i ng-repeat="star in [].constructor(avgRating) track by $index" class="fa fa-star"></i>
 											</div>
 										</div>
+
+
+
+
 
 										<div class="form-group">
 											<select class="form-control" name="color" id="color" ng-model="selectedMauSac" ng-change="searchDetail()">
@@ -107,6 +111,10 @@
 										<div class="product-action-simple">
 											<div class="product-wishlist">
 												<a href="javascript:(0);" class="btn-wishlist">Thêm vào yêu thích</a>
+												<a class="nav-item" style="padding-left: 80px;color: #0a0a0a;font-size: 12px" href="#"
+												   data-bs-toggle="modal" data-bs-target="#sizeGuideModal">
+													<u>BẢNG KÍCH CỠ <i class="zmdi zmdi-ruler"></i></u>
+												</a>
 											</div>
 											<div class="payment-button">
 												<a th:attr="ng-click=@{|addToCart(p.id)|}" th:href="@{/cart/view}" class="btn-payment">Thêm vào giỏ</a>
@@ -135,6 +143,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="row">
 					<div class="col-12">
 						<div class="product-review-tabs-content">
@@ -144,61 +153,104 @@
 										aria-controls="description" aria-selected="true">Mô tả</a>
 								</li>
 								<li role="presentation">
-									<a id="reviews-tab" data-bs-toggle="pill" href="#reviews" role="tab" aria-controls="reviews"
-										aria-selected="false">Đánh giá</a>
+									<a id="reviews-tab" data-bs-toggle="pill" href="#reviews" role="tab"
+									   aria-controls="reviews"
+									   aria-selected="false"
+									   th:attr="ng-click='showRate(\'' + ${item.getSanPham().getMa()} + '\')'">Đánh
+										giá</a>
+								</li>
+								<li role="presentation">
+									<a id="huongdanmuahang" data-bs-toggle="pill" href="#buy" role="tab" aria-controls="huongdanmuahang" aria-selected="false">
+										Hướng dẫn mua hàng
+									</a>
 								</li>
 							</ul>
 							<div class="tab-content product-tab-content" id="ReviewTabContent">
 								<div class="tab-pane fade show active" id="description" role="tabpanel"
-									aria-labelledby="description-tab">
-									<div class="product-description">
+										   aria-labelledby="description-tab">
+								<div class="product-description">
+									<p>[[*{SanPham.MoTa}]]</p>
 
-											<p>[[*{SanPham.MoTa}]]</p>
-
-
-
-
-
-									</div>
 								</div>
+							</div>
 								<div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
 									<div class="product-review-content">
 										<div class="review-content-header">
-											<h3>Customer Reviews</h3>
+											<h3>Đánh giá từ khách hàng <i>(Hãy mua hàng ngay để đánh giá sản phẩm)</i>
+											</h3>
 										</div>
-										<div class="reviews-form-area show">
-											<h4 class="title">Write a review</h4>
-											<div class="reviews-form-content">
-												<form action="#">
-													<div class="row">
-														<div class="col-md-12">
-															<div class="form-group">
-																<label for="for_name">Name</label>
-																<input id="for_name" class="form-control" type="text" placeholder="Nhập tên">
-															</div>
-														</div>
-														<div class="col-md-12">
-															<div class="form-group">
-																<label for="for_email">Email</label>
-																<input id="for_email" class="form-control" type="email"
-																	placeholder="john.smith@example.com">
-															</div>
-														</div>
-														<div class="col-md-12">
-															<div class="form-group">
-																<label for="for_comment">Content</label>
-																<textarea id="for_comment" class="form-control" placeholder="Nhập đánh giá"></textarea>
-															</div>
-														</div>
-														<div class="col-md-12">
-															<div class="form-submit-btn">
-																<button type="submit" class="btn-submit">Bình luận</button>
-															</div>
-														</div>
+										<div class="row">
+											<div class="col-lg-12">
+												<br><br>
+												<div class="rating-box" ng-repeat="review in reviews ">
+													<div class="rating">
+														<p style="font-style: italic; font-family: 'Be Vietnam Pro', sans-serif;font-size: 20px">
+															{{ review.account.fullname}}</p>
+														<p>{{ review.ngayCmt | date:'HH:mm dd-MM-yyyy' }}</p>
+														<i class="fa fa-star" style="color: #ffd43b;"
+														   ng-repeat="star in [].constructor(review.sao) track by $index"></i>
+														<br>
+														<span>{{review.comment}}</span>
 													</div>
-												</form>
+												</div>
+
 											</div>
 										</div>
+									</div>
+								</div>
+								<div class="tab-pane fade" id="buy" role="tabpanel" aria-labelledby="huongdanmuahang">
+									<div class="product-buying">
+										<p>
+											<strong>Hướng dẫn mua hàng</strong>
+											<br>
+											<strong>HOTLINE Bộ phận bán hàng trực tuyến: 0966861471</strong>
+										</p>
+
+										<ol>
+											<li>
+												<strong>Bước 1: Chọn sản phẩm</strong>
+												<ul>
+													<li>Click vào “Sản phẩm” để chọn sản phẩm.</li>
+													<li>Sử dụng chức năng tìm kiếm sản phẩm để nhanh chóng tìm được sản phẩm ưng ý, vui lòng nhập thông tin vào mục "Tìm kiếm sản phẩm" hộp bên trái.</li>
+												</ul>
+											</li>
+
+											<li>
+												<strong>Bước 2: Quyết định đặt hàng trực tuyến</strong>
+												<ul>
+													<li>Chọn nút "Giỏ hàng" biểu tượng trong danh sách tất cả các sản phẩm hoặc nút "Đơn hàng" biểu tượng trong chi tiết sản phẩm.</li>
+												</ul>
+											</li>
+
+											<li>
+												<strong>Bước 3: Cập nhật thông tin giỏ hàng</strong>
+												<ul>
+													<li>Chọn sản phẩm cần mua.</li>
+													<li>Chọn nút "Xóa" biểu tượng bên phải nếu bạn muốn xóa sản phẩm đó khỏi giỏ hàng.</li>
+													<li>Chọn "Tiếp tục mua" khi bạn muốn thêm một sản phẩm khác vào xe đẩy.</li>
+													<li>Chọn “Cập nhật giỏ hàng” để hoàn tất và biết tổng giá trị giỏ hàng.</li>
+													<li>“Xác nhận” khi bạn đã hoàn tất việc lựa chọn và đặt hàng để chuyển sang bước tiếp theo.</li>
+												</ul>
+											</li>
+
+											<li>
+												<strong>Bước 4: Xác nhận đơn hàng</strong>
+												<ul>
+													<li>Đơn hàng đã hoàn thành hiển thị tất cả thông tin sản phẩm, mã sản phẩm đã chọn và tổng giá trị đơn hàng.</li>
+													<li>Vui lòng cung cấp đầy đủ thông tin liên hệ để chúng tôi có thể liên hệ và gửi xác nhận đơn hàng cho bạn.</li>
+												</ul>
+											</li>
+
+											<li>
+												<strong>Bước 5: Hoàn tất đơn hàng</strong>
+												<ul>
+													<li>Khi bạn chọn "Xác nhận", thông tin đơn hàng đã được gửi tới quản trị web.</li>
+													<li>Trong vòng 24h chúng tôi sẽ gửi email và liên hệ qua điện thoại để xác nhận đơn hàng (trừ ngày lễ).</li>
+												</ul>
+											</li>
+										</ol>
+
+
 									</div>
 								</div>
 							</div>
@@ -207,6 +259,7 @@
 				</div>
 			</div>
 		</section>
+
 
 		<section class="product-area product-new-arrivals-area product-related-area">
 			<div class="container">
@@ -249,6 +302,35 @@
 							<div class="swiper-button-next">
 								<i class="zmdi zmdi-chevron-right"></i>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<!--modal size-->
+			<div class="modal fade" id="sizeGuideModal" tabindex="-1"
+				 aria-labelledby="sizeGuideModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="sizeGuideModalLabel" style="text-align: center">HƯỚNG DẪN CHỌN SIZE</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal"
+									aria-label="Close"></button>
+						</div>
+						<div class="modal-body">
+
+							<!-- Size guide content goes here -->
+
+
+							<img id="image" class="m-auto d-block my-5" src="/assets/img/guidesize.png" alt="Image" />
+
+
+
+						</div>
+						<div class="modal-footer">
+							<!--<button type="button" class="btn btn-secondary"
+									data-bs-dismiss="modal">Đóng</button>-->
 						</div>
 					</div>
 				</div>
