--- a/src/main/resources/templates/sanpham.html
+++ b/src/main/resources/templates/sanpham.html
@@ -119,11 +119,12 @@
                     <h4>Không tìm thấy sản phẩm phù hợp</h4>
                 </div>
                                 <div class="row">
-                                    <div class="col-md-4" th:each="p:${items}">
+                                    <div class="col-md-3" th:each="p:${items}">
                                         <div class="product-item">
                                             <div class="inner-content">
                                                 <div class="product-thumb">
-                                                    <a th:href="@{|/product/detail/${p.id}|}">
+                                                    <a th:href="@{|/product/detail/${p.sanPham.ma}|}"
+                                                       ng-click="searchDetail()">
                                                         <img class="product-item m-auto d-block" th:src="@{|/assets/images/${p.sanPham.getImage().get(0).ma}|}"
                                                              th:title="${p.sanPham.ten}">
                                                     </a>
@@ -142,8 +143,8 @@
                                                                th:attr="ng-click='addFavorite(\'' + ${p.sanPham.ma} + '\', user1)'">
                                                                 <i class="zmdi zmdi-favorite-outline zmdi-hc-fw icon"></i>
                                                             </a>
-                                                            <a class="add-cart" th:href="@{|/product/detail/${p.id}|}"
-                                                               th:attr="ng-click=@{|addtoCart(${p.id})|}">
+
+                                                            <a class="add-cart" th:href="@{|/product/detail/${p.sanPham.ma}|}">
                                                                 <i class="zmdi zmdi-shopping-cart-plus icon"></i>
                                                             </a>
                                                         </div>
@@ -152,7 +153,7 @@
                                                 <div class="product-desc">
                                                     <div class="product-info">
                                                         <h4 class="title">
-                                                            <a th:href="@{|/product/detail/${p.id}|}">[(${p.sanPham.ten})]</a>
+                                                            <a th:href="@{|/product/detail/${p.sanPham.ma}|}" ng-click="searchDetail()">[(${p.sanPham.ten})]</a>
                                                         </h4>
 
                                                     </div>
@@ -240,13 +241,13 @@
                             <div class="title" data-toggle="collapse" href="#size-collapse-1" role="button"
                                  aria-expanded="false"
                                  aria-controls="size-collapse">
-                                <div class="text">Size</div>
+                                <div class="text">Màu sắc</div>
                                 <i class="fas fa-chevron-up"></i>
                             </div>
                             <div class="select-filter collapse show" id="size-collapse-1">
-                                <th:block th:each="size : ${sizeVn}">
-                                    <div class="item check-size checkbox-mobile" th:data-id="${size}"
-                                         th:text="${size.name}"></div>
+                                <th:block th:each="color : ${colors}">
+                                    <div class="item check-size checkbox-mobile" th:data-id="${colors}"
+                                         th:text="${color.getName()}"></div>
                                 </th:block>
                             </div>
                         </div>
